--- a/gleam.toml
+++ b/gleam.toml
@@ -1,9 +1,9 @@
 name = "scala_stdlib"
 version = "0.0.1"
-
-description = "An std lib closer to the feel of the one from Scala"
 licences = ["AGPL-3.0-or-later"]
-repository = { type = "github", user = "varcorsd", repo = "scala-stdlib" }
+description = "An extended standard library for the Gleam programming language inspired by Scala language and its ecosystem"
+
+repository = { type = "github", user = "varcorsd", repo = "scala-stdlib-4-gleam" }
 
 [dependencies]
 gleam_stdlib = "~> 0.34 or ~> 1.0"
